<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mpt_ros</name>
  <version>0.1.7</version>
  <description>Examples using FogROS2</description>
  <maintainer email="jeffi@berkeley.edu">Jeff Ichnowski</maintainer>
  <maintainer email="kych@berkeley.edu">Kaiyuan (Eric) Chen</maintainer>
  <maintainer email="kdharmarajan@berkeley.edu">Karthik Dharmarajan</maintainer>
  <maintainer email="simeon.adebola@berkeley.edu">Simeon Adebola</maintainer>
  <author email="jeffi@berkeley.edu">Jeff Ichnowski</author>
  <author email="kych@berkeley.edu">Kaiyuan (Eric) Chen</author>
  <author email="kdharmarajan@berkeley.edu">Karthik Dharmarajan</author>
  <author email="simeon.adebola@berkeley.edu">Simeon Adebola</author>
  <author email="mdanielczuk@berkeley.edu">Michael Danielczuk</author>
  <author email="victor@accelerationrobotics.com">Víctor Mayoral-Vilches</author>
  <author email="23zhankanghong@berkeley.edu">Hugo Zhan</author>
  <author email="xzrderek@berkeley.edu">Derek Xu</author>
  <author email="ghassemiramtin@berkeley.edu">Ramtin Ghassemi</author>
  <author email="nikhiljha@berkeley.edu">Nikhil Jha</author>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>fogros2</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>ros2launch</exec_depend>
  </export>
</package>
